force-app/main/default/objects/OpportunityInteractionLog__c/OpportunityInteractionLog__c.object-meta.xml
<CustomObject>
    <label>Opportunity Interaction Log</label>
    <pluralLabel>Opportunity Interaction Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Opportunity Interaction Log Number</label>
        <displayFormat>OIL-{000000}</displayFormat>
    </nameField>
</CustomObject>