force-app/main/default/objects/OpportunityInteractionLog__c/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <label>Interaction Date</label>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>