force-app/main/default/objects/OpportunityInteractionLog__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Interaction Logs</relationshipLabel>
    <relationshipName>Opportunity_Interaction_Logs</relationshipName>
    <required>true</required>
</CustomField>