force-app/main/default/objects/OpportunityInteractionLog__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>